--- a/.config/sway/config
+++ b/.config/sway/config
@@ -25,7 +25,7 @@ set $filemgr thunar
 # application launchers
 # Note: it's recommended that you pass the final command to sway
 #set $menu dmenu_path | bemenu | xargs swaymsg exec --
-set $menu wofi --show=drun | xargs swaymsg exec --
+set $menu wofi -i --show=drun | xargs swaymsg exec --
 set $alttab ~/.config/sway/alttab.sh
 
 ### Output configuration
