--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -1,6 +1,6 @@
 font=Iosevka NFM:size=13:style=Medium,Hack:size=13,monospace:size=13
 pad=16x16
-term=xterm-256color
+# term=xterm-256color
 
 [colors]
 alpha=0.95
