--- a/.config/sway/config
+++ b/.config/sway/config
@@ -72,6 +72,7 @@ bindsym $mod+Shift+q kill
 bindsym $mod+Shift+s exec grim -t png -g "$(slurp)" ~/Pictures/Screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
 bindsym $mod+Shift+t exec ~/.local/bin/dmenu-hamster.sh ask
 bindsym $mod+Shift+v exec ~/.local/bin/update-hsetroot.sh -s
+bindsym $mod+Shift+w exec notify-send "$(env|grep -i sway)"
 bindsym $mod+Tab exec $alttab
 bindsym $mod+d exec ~/.local/bin/dmenu-run.sh
 bindsym $mod+p exec grim -t jpeg ~/Pictures/Screenshots/$(date +%Y-%m-%d_%H-%m-%s).png
