--- a/.config/sway/config
+++ b/.config/sway/config
@@ -228,6 +228,7 @@ bindsym $mod+Escape exec ~/.local/bin/dmenu-sys.sh
 ### gaps stuff ###
 default_border pixel 3
 smart_gaps on
+smart_borders on
 gaps inner 16
 gaps outer 0
 bindsym $mod+g gaps inner all minus 8
