--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
 bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
 bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
-set-window-option -g allow-passthrough on
+set-option -g allow-passthrough on
 
 # To copy, left click and drag to highlight text in yellow, 
 # once you release left click yellow text will disappear and will automatically be available in clibboard
