--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -5,7 +5,7 @@ pad=16x16
 [colors]
 alpha=0.95
 foreground=f8f8f2
-background=282a2c
+background=282a36
 # Dracula theme 
 regular0=44475a
 regular1=ff5555
