labwc: some love on alpine

--- a/.config/fuzzel/fuzzel.ini
+++ b/.config/fuzzel/fuzzel.ini
@@ -9,6 +9,7 @@ font=Iosevka Nerd Font Mono
 # fuzzy=yes
 # show-actions=no
 # terminal=$TERMINAL -e  # Note: you cannot actually use environment variables here
+terminal=foot -e
 # launch-prefix=<not set>
 
 # lines=15
