timew past weeks report

--- a/.timewarrior/timewarrior.cfg
+++ b/.timewarrior/timewarrior.cfg
@@ -16,3 +16,10 @@ reports.month.hours = auto
 
 reports.month.details=yes     # Show interval breakdowns
 reports.month.summary=yes     # Show daily and total summaries
+
+[reports.week]
+period=week
+range=week
+details=yes
+summary=yes
+
