rocky is now on HDMI

--- a/.config/sway/rocky.conf
+++ b/.config/sway/rocky.conf
@@ -1,6 +1,6 @@
 # vim: filetype=swayconfig
-set $primary DP-1
-set $secondary HDMI-A-1
+set $primary HDMI-A-1
+set $secondary DP-1
 
 output $primary pos 2560 0
 output $secondary pos 0 0
